# SteamLibrarian

./: .gitignore  CMakeLists.txt  README.md  codesign.cmd.example  index.html  main.cpp  main.qml  params.json  version.h.in
art/: SteamLibrarianUI.sfd
facade/: CMakeLists.txt
facade/include/facade/: RegisterTypes.hpp  Start.hpp
facade/src/: AboutPageAbout.qml  AboutPageAboutForm.ui.qml  AboutPageLicense.qml  AboutPageLicenseForm.ui.qml  AboutPanel.qml  AboutPanelForm.ui.qml  AppsModel.cpp  AppsModel.hpp  FormatByteAmount.cpp  FormatByteAmount.hpp  GamesTableView.qml  LibrariesCombo.qml  LibrariesModel.cpp  LibrariesModel.hpp  MenuPopupButton.qml  RedBlackTree.hpp  RegisterTypes.cpp  SelectedAppPanel.qml  SelectedAppPanelForm.ui.qml  StandardImageProvider.cpp  StandardImageProvider.hpp  Start.cpp  UI.cpp  UI.hpp  WorkPanel.qml  WorkPanelItem.qml  facade.qrc  main.qml  sortfilterproxymodel.cpp  sortfilterproxymodel.h
facade/src/js/: RedBlackTree.js
facade/src/steps/: StepPerformMove.qml  StepPerformUndo.qml  StepQueryUndo.qml  StepShowMessage.qml  StepWait.qml  StepWaitSteamStop.qml
facade/src/steps/ui/: UiPerformMove.qml  UiPerformMoveForm.ui.qml  UiQueryUndo.qml  UiQueryUndoForm.ui.qml  UiShowMessage.qml  UiShowMessageForm.ui.qml  UiSteamStopQuery.qml  UiSteamStopQueryForm.ui.qml  UiWait.qml  UiWaitForSteamStop.qml  UiWaitForSteamStopForm.ui.qml  UiWaitForm.ui.qml
facade/src/tests/: test_RedBlackTree.hpp
installer/: CMakeLists.txt  ExePackage.wixproj  ExePackage.wxs  MsiPackage.wixproj  MsiPackage.wxs  collect_libs.cmake  definitions.wxi  definitions.wxi.in  gpl-3.0.rtf  installer.sln.in
piping/: CMakeLists.txt
piping/include/piping/: App.hpp  AppMover.hpp  Libraries.hpp  Library.hpp  Piping.hpp  RegisterSingleton.hpp  RegisterTypes.hpp  vdf_fwd.hpp
piping/src/: App.cpp  AppMover.cpp  AppMoverWorker.cpp  AppMoverWorker.hpp  AppMoverWorker_FileOperationProgressSink.cpp  AppMoverWorker_FileOperationProgressSink.hpp  Libraries.cpp  Library.cpp  Piping.cpp  RegisterSingleton.cpp  RegisterTypes.cpp  RunningStateDetector.cpp  RunningStateDetector.hpp  Version.cpp  Version.hpp  vdf.cpp  vdf.hpp
plugin/: SteamLibrarian.cpp  SteamLibrarian.hpp  qmldir
resources/: SteamLibrarian.rc  make_icon.sh
